fix disable scroll on mobile

--- a/src/sass/modal.sass
+++ b/src/sass/modal.sass
@@ -1,12 +1,26 @@
 $modalWidgetCloseColor: black
 
+html, body
+    margin: 0
+    padding: 0
+
+body
+    -webkit-overflow-scrolling: touch
+    transform: translate3d(0, 0, 0)
+
+.modalOverlay,
 .modalWidget
-    position: fixed
-    z-index: 2000
     width: 100%
     height: 100%
     top: 0
     left: 0
+    &:active,
+    &:focus
+        outline: none
+
+.modalWidget
+    position: fixed
+    z-index: 2000
     background: rgba(255, 255, 255, 0.9)
 
     display: flex
@@ -17,6 +31,10 @@ $modalWidgetCloseColor: black
     &:focus
         outline: none
 
+.modalOverlay,
+    position: absolute
+    z-index: 1
+
 .modalWidget__close
     display: block
     position: absolute
@@ -25,7 +43,7 @@ $modalWidgetCloseColor: black
     overflow: hidden
     border: none
     outline: none
-    z-index: 2
+    z-index: 3
     width: 40px
     height: 40px
     // background-image: url("data:image/svg+xml,<svg width='20' height='32' viewBox='0 0 20 32' xmlns='http://www.w3.org/2000/svg'><path fill='#000000' d='M20 10l-4-4-6 6-6-6-4 4 6 6-6 6 4 4 6-6 6 6 4-4-6-6 6-6z'></path></svg>")
@@ -39,9 +57,12 @@ $modalWidgetCloseColor: black
 .modalWidget__box
     max-width: 50%
     position: relative
-    z-index: 1
+    z-index: 2
     background-color: red
     padding: 1em
+
+    // -webkit-overflow-scrolling: touch
+    // overflow-y: scroll
 
 // Effects
 .modalWidget-slidedown
@@ -53,7 +74,6 @@ $modalWidgetCloseColor: black
     visibility: visible
     transform: translateY(0%)
     transition: transform 0.4s ease-in-out
-
 
 .modalWidget--base
     background-color: rgba(white, 0.2)
